03-alb-ingress/4-ingress-host-based-routing/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-root
spec:
  selector:
    matchLabels:
      app: myapp-root
  template:
    metadata:
      labels:
        app: myapp-root
    spec:
      containers:
        - name: myapp-root
          image: jasmeetsingh94/alb-ingress
          ports:
            - containerPort: 80
   
---

apiVersion: v1
kind: Service
metadata:
  name: root-app-svc
  labels:
    app: app3-root-nginx
  annotations: 
    alb.ingress.kubernetes.io/healthcheck-path: /index.html

spec:
  type: NodePort
  selector:
    app: myapp-root
  ports:
    - port: 80
      targetPort: 80
