03-alb-ingress/4-ingress-host-based-routing/app1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp1
spec:
  selector:
    matchLabels:
      app: myapp1
  template:
    metadata:
      labels:
        app: myapp1
    spec:
      containers:
        - name: myapp1
          image: jasmeetsingh94/alb-ingress-v1
          ports:
            - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: app1-svc
  labels:
    app: app1-nginx
  annotations: 
      alb.ingress.kubernetes.io/healthcheck-path: /app1/index.html
spec:
  type: NodePort
  selector:
    app: myapp1
  ports:
    - port: 80
      targetPort: 80
